Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -1,25 +1,44 @@
-\documentclass[12pt,runningheads]{article}
+\documentclass[letterpaper]{article}
+\usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage[top=1.2in, left=0.9in, bottom=1.2in, right=0.9in]{geometry} % sets the margins
+\usepackage{amsmath,amsthm,amssymb}
+\usepackage{url} % fixes url problem
+\usepackage{csquotes}% Recommended
+\usepackage[doublespacing]{setspace} % turns on double spacing
 
-%enable apa
-\usepackage[british]{babel}
-\usepackage{csquotes}
-\usepackage[backend=biber,style=apa]{biblatex}
-\DeclareLanguageMapping{british}{british-apa}
+\usepackage[style=authoryear-ibid,backend=biber]{biblatex}
 
-%some additional packages
-\usepackage[pdftex]{graphicx}
+\addbibresource{references.bib}% Syntax for version >= 1.2
 
-\addbibresource{references.bib}
+\title{Forum Reflection}
+\author{Niloofar Khodabakhsh}
+\date{Spring Quarter 2017}
 
 \begin{document}
-
-\title{Response Paper 1\textsuperscript{st} Week}
-\author{Hans Peter}
 \maketitle
+\begin{abstract}
+This reflection paper is intended to give the takeaways of what presented by some speakers invited by the Multimedia Graduate Forum at CSUEB, Winter 2017.   
+\end{abstract}
 
-%text goes here
+\section{Reflection}
 
-\printbibliography
+	In the beginning of this course, I was exciting to look forward to hear different experiences in the second forum in many different fields that related to media, design, art…etc. This course was a big opportunity for me, because it gave me the chance to take the advantage of listening to the valuable life experiences and advises from the speakers.
+
+	In Ian Winter’s \parencite{LectureIan_2017}presentation about his art portfolio, I learned a lot about photography, although I don’t have enough background in photography. His talk was very organized and easy to understand. He vividly illustrated many of his work that I only see on TV, and never worked on something like that I really enjoyed the activity that he gave us during the break of taking pictures of a partner every 5 seconds. The series of pictures were fun and interesting when we made it like stop motion, at the end it was fun to look and enjoy different series of photos. He was able to make a friendly environment by making us move around the room to take those enjoyable pictures. Another thing I would like to mention is that I wish I could learn more about Isadora software, I have not heard about it before, and it looks professional to make videos.
+    
+	What I found great from Lonny Brook’s \parencite{LectureLonny_2017} talk was that: “Afrofuturism emphasizes the intersection of black cultures with questions of imagination, liberation, and technology". Afrofuturism explores concepts of race, space and time”. This is the first time I hear about this Afrofuturism concept. It is always good to know about new things and terminologies. I like the way Lonny explained the concept. And I’m interested and curious to learn more about it.  
+Also, I really liked and enjoyed the activity about thinking and imagining how the moon will look like in the future. We ended up having different and amazing imaginations from each group.
+
+	The big takeaway I took from Mitch Altman’s\parencite{LectureMitch_2017} talk is that “success means doing what you love, and by doing what you love, you get enough to keep doing what you love. Mitch is actually one of those who inspired me by his creativity by following his heart and love for his creations. As a result of his love and success he started the Hacker Space business and how it has become a World Wide business.  His message for us was to follow our values, find what we love to do, and try to work hard to design and make something new and interesting.
+    
+	To sum up, this forum was filled with knowledge, sharing experiences, and a fun way to investigate others' journey of achievements. I am looking forward to the next Forum, Spring 2017.
+ 
+
+
+\printbibliography[title={References and Citations}]
 
 \end{document}
+
+%\printbibliography[title={References and Citations}]
+%\printbibliography[type=article,title={Articles }]
